made the navbar fix and adjusted the pages to make it not overlap some of the content

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,6 +12,9 @@
 }
 
 .navbar-jamin {
+  position: fixed;
+  z-index: 10;
+  width: 100%;
   background-color: black !important;
   padding: 1em 1rem;
   align-items: center;
